Preprocessed data with range normalization by variables.

--- a/backpropagation-cplusplus.vcxproj
+++ b/backpropagation-cplusplus.vcxproj
@@ -150,10 +150,12 @@
     <ClCompile Include="CsvReader.cpp" />
     <ClCompile Include="DataPreparator.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Preprocessor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CsvReader.h" />
     <ClInclude Include="DataPreparator.h" />
+    <ClInclude Include="Preprocessor.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
